--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,2 @@
-# These are supported funding model platforms
-
 github: cristiantela
-custom: ['https://nubank.com.br/pagar/199pu6/OH6ITDqcpU']
+custom: ['https://nubank.com.br/pagar/199pu6/RT40clAws4', 'https://picpay.me/cristiantela']
